<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sports Coach Board</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear Board</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_exit">Exit</string>
    <string name="sure_want_clear">Are you sure you want to clear the board?</string>
	<string name="splash_title">Sports Coach Helper</string>
	<string name="enter">Enter</string>
	<string name="setNumber">Label</string>
	<string name="enter_play_name">Enter Play Name</string>
	<string name="play_name">Play Name</string>
	
	<string name="soccer">Soccer</string>
	<string name="voley">Volleyball</string>
	<string name="basketball">Basketball</string>
	<string name="field">Field</string>
	<string name="drawing_mode">Drawing Mode</string>
	<string name="organization_mode">Organization Mode</string>
	<string name="continuous_line_mode">Continuous Line</string>
	<string name="saved_plays">Saved Plays</string>
    <string name="dotted_line_mode">Dotted Line</string>
    <string name="eraser_mode">Dotted Line</string>

    <string name="templates">Templates</string>
    <string name="localroundplayer">localroundplayer</string>
    <string name="localtriangleplayer">localtriangleplayer</string>
    <string name="localsquareplayer">localsquareplayer</string>
    <string name="visitroundplayer">visitroundplayer</string>
    <string name="visittriangleplayer">visittriangleplayer</string>
    <string name="visitsquareplayer">visitsquareplayer</string>
    <string name="voleyball">voley</string>
    <string name="soccerball">soccerball</string>
    <string name="ball">ball</string>
    <string name="visit_and_like">Visit and Like our page</string>
    <string name="helptitle">Help</string>
    <string name="menu_help">Help</string>
    <string name="help_mode_content"><b>Drawing Modes</b>
    </string>
    <string name="help_mode_selection"><br><b>The Selection Mode:</b> To Change the position of the players that are added to the field. In this mode the players can be erased by using the trash icon at the bottom of the screen</br></string>
    <string name="help_mode_continuous"><br><b>The Continuous Line Mode:</b> To draw continuous lines on the field(If held, the continuous icon allows us to change the color of the line)</br>
       </string>
    <string name="help_mode_dotted"> <br><b>The Dotted Line Mode:</b> To draw dotted lines on the field (If held, the dotted icon allows us to change the color of the line)</br></string>
    <string name="help_players_content">These are the players that can be placed in the field. Players can be dragged into the field, for the devices that allow this functionality or they can be selected by tapping on them and then tapping back in the desired position.
    </string>
    <string name="help_round_player">
        <b>Round Players:</b> Round players can be placed on any field. The black round players are for local teams and the red for visitors</string>
    <string name="help_triangle_player">
        <b>Triangle Players:</b> Triangle players can be placed only on volleyball fields. The black triangle players are for local teams and the red for visitors</string>
    <string name="help_square_player">
        <b>Square Players:</b> Square players can be placed only on volleyball fields. The black square players are for local teams and the red for visitors</string>
    <string name="help_balls"><b>Balls</b></string>
    <string name="help_balls_content">Balls behave the same way as the players. They can be added,
        their position can be changed and they can be erased using the trash can. All these operations are performed in selection mode
    </string>
    <string name="help_trash_can"> <b>Trash Bin:</b>The Trash Bin can be used to erase players, lines or the ball. It must be used in selection mode and can only be seen if anything is selected (Selecting a line can be tricky, Im still fixing this editing feature)</string>
    <string name="rno_save_are_you_sure_exit">The play has not been saved. Are you sure you want to exit?</string>
    <string name="no_save_are_you_sure_exit">Some not saved changes could be lost, are yo sure you want to exit?</string>

    <string-array name="fields">
		<item >@string/soccer</item>
		<item >@string/voley</item>
		<item >@string/basketball</item>
	</string-array>
	
	<integer-array name="fieldsIndexes">
		<item >@drawable/soccer</item>
		<item >@drawable/voley</item>
		<item >@drawable/basket</item>
	</integer-array>
	
	<string-array name="main_mode_options">
	    <item >@string/organization_mode</item>
	    <item >@string/drawing_mode</item>
	</string-array>
	
	
	<string-array name="main_line_options">
	    <item >@string/continuous_line_mode</item>
	    <item >@string/dotted_line_mode</item>
	</string-array>

</resources>