<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_clear_document"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/new_document"
        android:title="@string/menu_clear"/>
    
    <item
        android:id="@+id/menu_open_document"
        android:showAsAction="never"
        android:title="@string/menu_open"/>
    
    <item
        android:id="@+id/menu_save_document"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_save"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>

</menu>