<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <com.google.ads.AdView android:id="@+id/adView"
                           android:layout_width="match_parent"
                           android:layout_height="50dp"
                           ads:adUnitId="a15216716ccc941"
                           ads:adSize="BANNER"
                           ads:testDevices="0388924340a103d7,65d26c7b2907d9b5"
                           ads:loadAdOnCreate="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
       >

        <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/court_padding"
            android:text="@string/field"
            android:id="@+id/field_name"
            android:textSize="@dimen/splash_title_size"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageView
            android:layout_width="@dimen/pager_court_width"
            android:layout_height="@dimen/pager_court_width"
            android:padding="@dimen/court_padding"
            android:layout_gravity="center"
            android:id="@+id/field_type"/>

            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_of_field"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="@dimen/court_padding"
                    ></Spinner>

        </LinearLayout>

         <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent"
        android:orientation="vertical" >

             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/templatesOrSaves"
                 android:layout_gravity="center"
                 android:gravity="center"
                 >
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/saved_plays"
                     android:textColor="@android:color/white"
                     android:checked="true"
                     android:gravity="center"
                     android:textSize="@dimen/radio_button_text_size"
                     android:layout_gravity="center"
                     android:id="@+id/btnSaves">
                     </RadioButton>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/white"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textSize="@dimen/radio_button_text_size"
                     android:text="@string/templates"
                     android:id="@+id/btnTemplates">
                 </RadioButton>
                 </RadioGroup>


                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5"
                            android:id="@+id/playList"
                            android:layout_gravity="center"
                            android:gravity="center"
                            ></ListView>


                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5"
                            android:id="@+id/templateList"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginBottom="50dp"
                            ></ListView>



        </LinearLayout>


    </LinearLayout>
</LinearLayout>